Fix top spacing on content pages, enlarge profile photo, remove demo files
- Reduce container top margin (mt-5 → mt-3) to eliminate blank space
- Set publications margin-top to 0 and remove redundant .post > article rule
- Increase profile photo width from 16% to 30% for better visual balance
- Delete leftover demo/template files (distill.bib, plotly, template_error)

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -82,7 +82,7 @@ ul.task-list input[type="checkbox"] {
 
 @media (min-width: 576px) {
   .profile {
-    width: 16%;
+    width: 30%;
 
     .address {
       p {
